updated links to read count input

--- a/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
+++ b/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "While the files produced in this notebook can be used to create simulated reads, the main use of this notebook is to serve as a template and guide for generating simulation runs, tailor-made for a pipeline that is to be validated.  \n",
     "\n",
-    "This notebook focuses on AmpSeq data because simulated data is particularly useful for this type of data. Whole-genome data for pipeline validataion can be obtained from real-world datasets that are readily available [from public resources](https://www.malariagen.net/resource/36/). AmpSeq data, on the other hand, depends on a specific primer panel, for which data may not be readily available. In addition, a pipeline written and validated for a spe\n",
+    "This notebook focuses on AmpSeq data because simulated data is particularly useful for this type of data. Whole-genome data for pipeline validataion can be obtained from real-world datasets that are readily available [from public resources](https://www.malariagen.net/resource/36/). AmpSeq data, on the other hand, depends on a specific primer panel, for which data may not be readily available. In addition, a pipeline written and validated for a specific AmpSeq panel, such as [SpotMalaria](https://ngs.sanger.ac.uk/production/malaria/Resource/29/20200705-GenRe-04a-SpotMalaria-0.39.pdf) may need to be validated against other primer panels, for which data does not exist yet.  \n",
     "\n",
     "In part 1 of this notebook, we obtain read counts from high-quality public data. This step is necessary for any simulation, so that the generated data provides realistic input for an analysis pipeline. Here, we simulate a [SpotMalaria](https://ngs.sanger.ac.uk/production/malaria/Resource/29/20200705-GenRe-04a-SpotMalaria-0.39.pdf) AmpSeq run, for which real-world samples exist in public repositories. This may not always be the case for simulating different AmpSeq primer panel runs, in which case the user may need to estimate realistic read counts in different ways.\n",
     "\n",
@@ -63,16 +63,16 @@
     "Both commands will take a potentially long time to run (depending on your system and network) and the first command will download a large amount of data over the internet. If you are working in a HPC/cloud environment, you may want to split the data into chunks and parallelise these tasks. This is beyond the scope of this recipe.  \n",
     "\n",
     "__Step 1: Download FASTQ files__    \n",
-    "Run the following command in a terminal:\n",
+    "Run the following command in a terminal (relative paths from this folder):\n",
     "```bash\n",
-    "python ../real-world_gold-standard_data/Pf8-GenReMekong/ENA_data_helper.py \\\n",
+    "python ../../../real-world_gold-standard_data/Pf8-GenReMekong/scripts/ENA_data_helper.py  \\\n",
     "    download \\\n",
-    "    --data ../real-world_gold-standard_data/Pf8 GenReMekong/ENA_download_manifest_concordant_phenotype_high_quality_samples.csv \\\n",
+    "    --data ../../../real-world_gold-standard_data/Pf8-GenReMekong/additional_output_files/ENA_download_manifest_concordant_phenotype_high_quality_samples.csv  \\\n",
     "    --skip_errors \\\n",
     "    --download_attempts 10 \\\n",
     "    --out ENA_download_concordant_phenotype_high_quality_sample \\\n",
     "```\n",
-    "It will create a folder \"ENA_download_concordant_phenotype_high_quality_sample\" in this directory. The folder contains the 3628 FASTQ (gzipped) files belonging to the [Pf8-GenReMekong_concordant_phenotype_high_quality_samples.csv](../real-world_gold-standard_data/Pf8-GenReMekong/Pf8-GenReMekong_concordant_phenotype_high_quality_samples.csv), created [here](../real-world_gold-standard_data/Pf8-GenReMekong/pf8genre.ipynb#Save-results:-concordant-phenotype-data).  \n",
+    "It will create a folder \"ENA_download_concordant_phenotype_high_quality_sample\" in this directory. The folder contains the 3628 FASTQ (gzipped) files belonging to the [Pf8-GenReMekong_concordant_phenotype_high_quality_samples.csv](../real-world_gold-standard_data/Pf8-GenReMekong/Pf8-GenReMekong_concordant_phenotype_high_quality_samples.csv), created [here](../../../real-world_gold-standard_data/Pf8-GenReMekong/scripts/pf8genre.ipynb#Save-results:-concordant-phenotype-data).  \n",
     "\n",
     "__Step 2: Obtain read counts__  \n",
     "Once the FASTQ download has completed, use the script \"run_counts.sh\", also in this folder, like this:  \n",
