--- a/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
+++ b/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "8dc8d3bc-d7ea-4954-a9f2-09f92f564cbb",
    "metadata": {
     "tags": []
@@ -219,7 +219,7 @@
        "[3628 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d6160fab-2fc3-4700-bda3-8bac7c28f01b",
    "metadata": {
     "tags": []
@@ -685,7 +685,7 @@
        "[907 rows x 23 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9c876cc3-0795-40e6-8d9e-f11372cab460",
    "metadata": {
     "tags": []
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "51e781cd-c5c9-4637-a499-36e5651ba811",
    "metadata": {
     "tags": []
@@ -790,7 +790,7 @@
        "2  SPEC    907"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "f0d717a1-8d71-437f-b92a-49f61f00f6cd",
    "metadata": {
     "tags": []
@@ -903,7 +903,7 @@
        "SPEC    1291.057332   0  17924    654.5    988.0   1445.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "19cf1db4-fe4b-44a4-99c1-4400d2d47f2a",
    "metadata": {
     "tags": []
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "19353f64-97d0-480a-8ebb-9f1327488aa2",
    "metadata": {
     "tags": []
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "7d27fe78-082c-4f89-928a-358206b71e51",
    "metadata": {
     "tags": []
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "4b784ca2-82b6-4f23-9a42-8abb263b63bc",
    "metadata": {
     "tags": []
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "76312dd6-8979-42e4-af23-78ea17ea3aaf",
    "metadata": {
     "tags": []
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "eb2d703e-f356-4e53-bf86-207b09c497de",
    "metadata": {
     "tags": []
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "7d44be3a-997c-4966-946f-70cccb6b4ac4",
    "metadata": {
     "tags": []
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "41dff90d-2c24-4064-a629-b13eb30a037c",
    "metadata": {
     "tags": []
@@ -1220,7 +1220,7 @@
        "[136 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "6955b22d-26d9-406d-a2bb-6af200127279",
    "metadata": {
     "tags": []
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "692521b7-b326-4c09-abd4-d93d1e8b726a",
    "metadata": {
     "tags": []
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "cb55aaba-c2d5-4a26-a75f-af4620127c46",
    "metadata": {
     "tags": []
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "fb9f56f1-511a-4001-a893-c7553c26489a",
    "metadata": {
     "tags": []
@@ -1350,13 +1350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "322d20a0-a5b6-46f4-b1b8-e96227242bf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sequence at Pf3D7_07_v3:403624-403626:AAA\n"
+     ]
+    }
+   ],
    "source": [
     "seq=sequence_for_pos(\n",
-    "    'PlasmoDB-68_Pfalciparum3D7_Genome.fasta',\n",
+    "    '../../simulation_run_input_files/PlasmoDB-68_Pfalciparum3D7_Genome.fasta',\n",
     "    chrom, \n",
     "    strand,\n",
     "    start,\n",
@@ -1377,7 +1385,7 @@
     "#CHROM\tPOS\tREF\tALT\n",
     "Pf3D7_07_v3\t403625\tA\tC\n",
     "```\n",
-    "This has been saved in this folder as file ```Pf3D7_07_v3_403625_a2c```"
+    "This has been prepared and saved as file ```../../simulation_run_input_files/Pf3D7_07_v3_403625_a2c```"
    ]
   },
   {
