--- a/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
+++ b/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
@@ -1396,7 +1396,7 @@
     "### Simulation pipeline final input files\n",
     "With the file created so far in this section, we are now able to create the final input files for a run of the [read simulation pipeline](https://github.com/ISOinaBox/pop_var_sim).  \n",
     "#### Haplotype manifest\n",
-    "According to the [pipeline manual](https://github.com/ISOinaBox/iib_readsim/blob/main/README.md), a \"haplotype manifest\" csv file is required to configure the reference genome(s) on which to create simulated reads. As we have three primer panels and two genotypes (WT and crt mutant), we need one line per genotype and primer panel in the manifest as shown here and saved as file ```hap_manifest_example.csv``` in this folder:  \n",
+    "According to the [pipeline manual](https://github.com/ISOinaBox/iib_readsim/blob/main/README.md), a \"haplotype manifest\" csv file is required to configure the reference genome(s) on which to create simulated reads. As we have three primer panels and two genotypes (WT and crt mutant), we need one line per genotype and primer panel in the manifest as shown here and saved as file ```../../simulation_run_input_files/hap_manifest_example.csv```:  \n",
     "```\n",
     "haplotype,base_fasta,variants_file,bed_file\n",
     "wt_spec,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,null,SpotMalaria-SPEC_Pf_amplicon_primers.bed\n",
@@ -1415,11 +1415,11 @@
     "The sample manifest file defines the samples that are to be simulated. Each sample can contain one or more haplotypes, as defined in the above haplotype manifest file. This would enable the simulation of mixed WT/mutant samples, which could be used to test the robustness of a pipeline for heterozygous results.  \n",
     "In the example provided here, we are not creating such mixed samples. Instead, we configure the pipeline to create one sample for each genotype (WT/mut) and for each primer sub-panel.  \n",
     "The read numbers are taken from the earlier analysis of real-world read counts in this notebook. For each genotype/primer-panel combination, we simulate one run each with the 25, 50 and 75 quantile of read counts from part 1 of this notebook.  \n",
-    "The final file, which is available in this folder as ```sample_manifest_example.json``` has the following content:  \n",
+    "The final file, which is saved as ```../../simulation_run_input_files/sample_manifest_example.json``` has the following content:  \n",
     "```\n",
     "[\n",
     "    {\n",
-    "        \"sample_id\": \"crtmut_spec_q25\", \n",
+    "        \"sample_id\": \"wt_spec_q25\", \n",
     "        \"genotypes\": [\"wt_spec\"], \n",
     "        \"proportions\": [1], \n",
     "        \"num_reads\": 654\n",
@@ -1436,43 +1436,6 @@
     "        \"proportions\": [1], \n",
     "        \"num_reads\": 1445\n",
     "    },\n",
-    "    {\n",
-    "        \"sample_id\": \"wt_grc1_q25\", \n",
-    "        \"genotypes\": [\"wt_spec\"], \n",
-    "        \"proportions\": [1], \n",
-    "        \"num_reads\": 25568\n",
-    "    },\n",
-    "    {\n",
-    "        \"sample_id\": \"wt_grc1_q50\", \n",
-    "        \"genotypes\": [\"wt_spec\"], \n",
-    "        \"proportions\": [1], \n",
-    "        \"num_reads\": 32424\n",
-    "    },\n",
-    "    {\n",
-    "        \"sample_id\": \"wt_grc1_q75\", \n",
-    "        \"genotypes\": [\"wt_spec\"], \n",
-    "        \"proportions\": [1], \n",
-    "        \"num_reads\": 40281\n",
-    "    },\n",
-    "        {\n",
-    "        \"sample_id\": \"wt_grc2_q25\", \n",
-    "        \"genotypes\": [\"wt_spec\"], \n",
-    "        \"proportions\": [1], \n",
-    "        \"num_reads\": 26732\n",
-    "    },\n",
-    "    {\n",
-    "        \"sample_id\": \"wt_grc2_q50\", \n",
-    "        \"genotypes\": [\"wt_spec\"], \n",
-    "        \"proportions\": [1], \n",
-    "        \"num_reads\": 32519\n",
-    "    },\n",
-    "    {\n",
-    "        \"sample_id\": \"wt_grc2_q75\", \n",
-    "        \"genotypes\": [\"wt_spec\"], \n",
-    "        \"proportions\": [1], \n",
-    "        \"num_reads\": 39864\n",
-    "    },\n",
-    "\n",
     "    {\n",
     "        \"sample_id\": \"crtmut_spec_q25\", \n",
     "        \"genotypes\": [\"crtmut_spec\"], \n",
@@ -1492,42 +1455,77 @@
     "        \"num_reads\": 1445\n",
     "    },\n",
     "    {\n",
+    "        \"sample_id\": \"wt_grc1_q25\", \n",
+    "        \"genotypes\": [\"wt_grc1\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 25568\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc1_q50\", \n",
+    "        \"genotypes\": [\"wt_grc1\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 32424\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc1_q75\", \n",
+    "        \"genotypes\": [\"wt_grc1\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 40281\n",
+    "    },\n",
+    "    {\n",
     "        \"sample_id\": \"crtmut_grc1_q25\", \n",
-    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"genotypes\": [\"crtmut_grc1\"], \n",
     "        \"proportions\": [1], \n",
     "        \"num_reads\": 25568\n",
     "    },\n",
     "    {\n",
     "        \"sample_id\": \"crtmut_grc1_q50\", \n",
-    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"genotypes\": [\"crtmut_grc1\"], \n",
     "        \"proportions\": [1], \n",
     "        \"num_reads\": 32424\n",
     "    },\n",
     "    {\n",
     "        \"sample_id\": \"crtmut_grc1_q75\", \n",
-    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"genotypes\": [\"crtmut_grc1\"], \n",
     "        \"proportions\": [1], \n",
     "        \"num_reads\": 40281\n",
     "    },\n",
-    "        {\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc2_q25\", \n",
+    "        \"genotypes\": [\"wt_grc2\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 26732\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc2_q50\", \n",
+    "        \"genotypes\": [\"wt_grc2\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 32519\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc2_q75\", \n",
+    "        \"genotypes\": [\"wt_grc2\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 39864\n",
+    "    },\n",
+    "    {\n",
     "        \"sample_id\": \"crtmut_grc2_q25\", \n",
-    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"genotypes\": [\"crtmut_grc2\"], \n",
     "        \"proportions\": [1], \n",
     "        \"num_reads\": 26732\n",
     "    },\n",
     "    {\n",
     "        \"sample_id\": \"crtmut_grc2_q50\", \n",
-    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"genotypes\": [\"crtmut_grc2\"], \n",
     "        \"proportions\": [1], \n",
     "        \"num_reads\": 32519\n",
     "    },\n",
     "    {\n",
     "        \"sample_id\": \"crtmut_grc2_q75\", \n",
-    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"genotypes\": [\"crtmut_grc2\"], \n",
     "        \"proportions\": [1], \n",
     "        \"num_reads\": 39864\n",
     "    }\n",
-    "\n",
     "]\n",
     "\n",
     "```\n",
