obtained the correct mito seq and updated relevant files

--- a/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
+++ b/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
@@ -1271,9 +1271,14 @@
    "metadata": {},
    "source": [
     "### Reference genome and annotation\n",
-    "The read simulation pipeline requires a reference genome. The _P. falciparum_ 3D7 reference genome was obtained from \n",
+    "The read simulation pipeline requires a reference genome. The _P. falciparum_ 3D7 v3 reference genome was obtained from \n",
     "https://plasmodb.org/common/downloads/Current_Release/Pfalciparum3D7/fasta/data/PlasmoDB-68_Pfalciparum3D7_Genome.fasta\n",
     "and is provided in folder ```../../simulation_run_input_files/```.  \n",
+    "\n",
+    "The [SpotMalaria primer panel spreadsheet](https://www.malariagen.net/wp-content/uploads/2023/11/20200705-GenRe-04b-SpotMalaria-SupplementaryFile1.xls) uses v3 of the 3D7 genome but refers to an older assembly of the 3D7 mitochondrium sequence. More information is available in these [release notes](https://www.malariagen.net/wp-content/uploads/2023/11/Pf7_README_20221021.txt). This [Pf7 data release page](https://www.malariagen.net/data_package/open-dataset-plasmodium-falciparum-v70/) provides the download link for a version of the genome with the mitochondrium sequence refered to by the SpotMalaria file. The link is:   \n",
+    "ftp://ngs.sanger.ac.uk/production/malaria/Resource/34/Pfalciparum.genome.fasta  \n",
+    "The mitochondirum sequence from that FASTA file was saved as additional file ```../../simulation_run_input_files/Pf_M76611.fasta```.  \n",
+    "\n",
     "In addition, a GFF genome annotation file is required for the next step, creating a variant file. It was obtained from \n",
     "https://plasmodb.org/a/service/raw-files/release-68/Pfalciparum3D7/gff/data/PlasmoDB-68_Pfalciparum3D7.gff and is also provided in the same folder.\n"
    ]
