updated haplotype manifest

--- a/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
+++ b/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
@@ -1404,10 +1404,10 @@
     "According to the [pipeline manual](https://github.com/ISOinaBox/iib_readsim/blob/main/README.md), a \"haplotype manifest\" csv file is required to configure the reference genome(s) on which to create simulated reads. As we have three primer panels and two genotypes (WT and crt mutant), we need one line per genotype and primer panel in the manifest as shown here and saved as file ```../../simulation_run_input_files/hap_manifest_example.csv```:  \n",
     "```\n",
     "haplotype,base_fasta,variants_file,bed_file\n",
-    "wt_spec,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,null,SpotMalaria-SPEC_Pf_amplicon_primers.bed\n",
+    "wt_spec,Pf_M76611.fasta,null,SpotMalaria-SPEC_Pf_amplicon_primers.bed\n",
     "wt_grc1,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,null,SpotMalaria-GRC1_Pf_amplicon_primers.bed\n",
     "wt_grc2,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,null,SpotMalaria-GRC2_Pf_amplicon_primers.bed\n",
-    "crtmut_spec,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,Pf3D7_07_v3_403625_a2c,SpotMalaria-SPEC_Pf_amplicon_primers.bed\n",
+    "crtmut_spec,Pf_M76611.fasta,Pf3D7_07_v3_403625_a2c,SpotMalaria-SPEC_Pf_amplicon_primers.bed\n",
     "crtmut_grc1,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,Pf3D7_07_v3_403625_a2c,SpotMalaria-GRC1_Pf_amplicon_primers.bed\n",
     "crtmut_grc2,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,Pf3D7_07_v3_403625_a2c,SpotMalaria-GRC2_Pf_amplicon_primers.bed\n",
     "```\n",
